examples/ok/testeReturn.kl
@Use("java")
public void main(){
    println("Retornando null");
    return null;
}