examples/error/constantNonCompileTime.kl
@Use("java")
public void main() {
    constant integer x = sum(2, 3);
    return;
}
